Initial setup for OBR forecast web app
- FastAPI backend with PolicyEngine integration
- Next.js frontend with growth factor inputs
- Charts to display income and poverty projections
- uv-based Python 3.11 environment setup

--- a/.gitignore
+++ b/.gitignore
@@ -38,9 +38,20 @@ yarn-error.log*
 venv/
 env/
 ENV/
+.venv/
+.env/
 
 # IDE
 .idea/
 .vscode/
 *.swp
 *.swo
+
+# Local development
+.env
+.env.local
+
+# Cache
+.pytest_cache/
+.ruff_cache/
+.mypy_cache/
