--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "fastapi",
     "uvicorn",
     "policyengine-uk",
+    "policyengine==0.1.2",
 ]
 
 [project.optional-dependencies]
