--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,20 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-select": "^2.1.6",
+    "@radix-ui/react-slider": "^1.2.3",
+    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.0.4",
+    "axios": "^1.6.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "next": "latest",
     "react": "latest",
     "react-dom": "latest",
-    "axios": "^1.6.0",
     "recharts": "^2.9.0",
-    "@radix-ui/react-tabs": "^1.0.4"
+    "tailwind-merge": "^3.0.2"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
-    "typescript": "^5.2.0",
     "eslint": "^8.50.0",
     "eslint-config-next": "latest",
+    "typescript": "^5.2.0",
     "vercel": "^33.0.0"
   }
 }
