--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,6 @@ dist/
 downloads/
 eggs/
 .eggs/
-lib/
 lib64/
 parts/
 sdist/
@@ -55,3 +54,5 @@ ENV/
 .pytest_cache/
 .ruff_cache/
 .mypy_cache/
+
+**static/
